2010-03-09  Aaron Griffith  <aargri@gmail.com>

	* src/vaht_mov.c (vaht_mov_open): fixed a bug that started reading
	from the end.

	* src/vaht_bmp.c (vaht_bmp_open): preparing for lazy image reading
	(vaht_bmp_close): added check to see if data is NULL

	* src/vaht_mov.c (vaht_mov_tell): added tell function
	(vaht_mov_read): removed need for internal seek position

	* src/vaht_resource.c: added a tell function

2010-03-08 Aaron Griffith <aargri@gmail.com>

	* vahttool: merged in vahttool sources

2010-03-07 Aaron Griffith <aargri@gmail.com>

	* vaht_mov.c: added tMOV translator

2009-02-23 Aaron Griffith <aargri@gmail.com>

	* vaht_bmp.c: removed useless, confusing LOOKBACKP wrap
	* vaht_bmp.c: fixed uncompressed, indexed decompression

2009-02-21 Aaron Griffith <aargri@gmail.com>
	
	* changed to autotools build system
	
	* vaht_bmp.c: added format introspection
	* vaht_bmp.c: added truecolor support
	
	* vaht_resource.c: can now read into NULL pointer, acts as seek.